2008-05-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/glwidget.*: Add method to clear unit cell data.

	* libavogadro/src/extensions/unitcell*: Improved unit cell
	dialog. Added "Apply" button to change parameters. Automatically
	changes number of cells to display via signals/slots. Button to
	delete unit cells. New button to "fill" unit cells with
	symmetry-defined atoms via the space group.

2008-05-27  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/propmodel.cpp: Get energy for all
	conformers and only use OBMol::GetEnergy() if no ConformerData is
	available. (fixes #1976199)

2008-05-26  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.cpp: Fixed PR 1973714 - removed the file
	ending from the file name passed to the save dialog. Also placed the
	macchempasteboard.h in a Mac ifdef to fix compilation on other OSes.

2008-05-27  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/drawtool.cpp: Do not try to change the bond
	order for X-H bonds when adjust hydrogens is on. Not sure if we should
	ever have double bonds to hydrogens...

2008-05-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/CMakeLists.txt,
	avogaro/src/mac/locversion.plist.in: Add additional Mac i18n
	support, solving PR#1972467.

	* Doxyfile, avogadro/src/mainwindow.h, 
	libavogadro/src/*: Update doxygen documentation.

	* avogadro/src/macchempasteboard.*: Add mime converter to supply
	MIME types for Mac chemical clipboard/pasteboard types
	(i.e. ChemDraw).

	* avogadro/src/mainwindow.cpp: Add support for ChemDraw. Doesn't
	parse -- need more debugging.

2008-05-23  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Bump our dependencies on CMake and Qt.

2008-05-22  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/insertfragmentdialog.cpp: Fix insert smiles.
	Also disable the driectoryTreeView and smilesLineEdit while in insert